assets/less/responsive/mobile/views/profile.less
.profileView {
	#main {
		padding-top: 10px;
		.box-fix;
		nav {
			.column(8,8,left,0);
			height: 75px;
			margin-bottom: -75px;
			heading {
				.column(8,8);
				text-align: center;
				h1 {
					padding: 3px;
					margin: 0;
					width: 65%;
					float: left;
					.box-fix;
					text-align: left;
				}
				.trustlevel {
					width: 35%;
					#verifyUser {
						width: 250%;
						margin-left: -175%;
						&:before, &:after {
							left: auto;
							right: 13px;
						}
						&:after {
							margin-left: 0;
							margin-right: 1px;
						}
					}
				}
			}
			menu {
				.column(8,8);
				margin: 5px 0 10px 0;
				padding: 0;
				li {
					.column(1,3);
				}
			}
		}
		#wrap {width: 100%; height: 100%; padding-top: 75px; .box-fix; margin: 0 auto; }
		#scroller {width: 100%; height: 100%; overflow-y: scroll; overflow-x: hidden; .box-fix; margin:0 auto; -webkit-overflow-scrolling: touch;}
		#info {
			width: 100%;
			padding: 0;
			article {
				.column(1,3);
				padding: 0;
				margin-bottom: 10px;
				height: 150px;
				.box-fix;
				header {
					height: 20px;
					padding: 5px;
				}
				&#generalInfo {
					.column(8,8,left,0);
					height: auto;
					margin-bottom: 10px;
					padding: 0;
					.userimage {
						.column(2,8);
						margin-top: 15px;
						margin-bottom: 1%;
						&.editing {
							width: 98% !important;
							#original {
								width: 100%;
							}
							.uploadImageForm {
								#filesUpload {
									position: relative !important;
									margin: -34px 0 0 0;
									float: left;
								}
							}
						}
						&.bigger {
							width: 48% !important;
							margin-top: 5px;
							margin-left: 26%;
							.editImage {
								opacity: 1;
							}
						}
					}
					.info {
						.column(6,8);
					}
					.actions {
						.column(12,12,left,0);
						.addToCircle {
							.column(2,2);
							margin: 10px 1% 0 1%;
							min-height: 40px;
							#selectCircle {
								padding: 0;
								height: 40px;
								width: 90%;
								display: inline-block;
								.box-fix;
								.inputWrap {
									border: 1px solid #bbb;
									.box-fix;
									li {
										&.searchField {
											width: 100%;
											height: 100%;
											input {
												width: 100%;
											}
										}
									}
								}
							}
							#circleSubmit {
								width: 10% !important;
								display: block;
								height: 38px;
								float:left;
								margin: -43px 0 0 90%;
								padding: 0px !important;
								text-align: center;
								border: none;
								border-right: 1px solid #bbb;
								.border-radiuses(5px, 5px, 0,0);
								i {
									display: inline;
								}
							}
						}
						.sendMessage, .addFriend {
							.column(2,2);
							margin: 10px 1% 0 1%;
							min-height: 40px;
							height: auto;
							padding: 8.5px;
						}
					}
				}
			}
		}
		#wall {
			.column(8,8,left,0);
			height: auto;
			padding: 0;
			margin-bottom: 1%;
			.box-fix;
			header {
				height: 20px;
				padding: 5px;
			}
			article {
				.column(8,8,left,0);
				margin-top: 10px;
			}
		}
		#friends {
			.column(8,8,left,0);
			height: auto;
			padding: 0;
			.box-fix;
			header {
				height: 20px;
				padding: 5px;
				margin-bottom: 1%;
			}
			#friendsList {
				li {
					position: relative;
					.column(1,2);
					.person {
						width: 100%;
					}
				}
			}
		}
	}
}

